fix text overflow of confirmation modal

--- a/ui/src/styles.scss
+++ b/ui/src/styles.scss
@@ -658,3 +658,7 @@ input[type=checkbox]{
 .hover-bg:hover{
   background-color: var(--hover-bg);
 }
+
+.word-break-all{
+  word-break: break-all;
+}
